--- a/src/notetaker/web/templates/index.html
+++ b/src/notetaker/web/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deep-Dive Video Note Taker</title>
+    <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
@@ -80,6 +81,8 @@
                         <div class="export-buttons">
                             <button class="btn btn-small" onclick="exportNotes('markdown')">Export MD</button>
                             <button class="btn btn-small" onclick="exportNotes('json')">Export JSON</button>
+                            <button class="btn btn-small" onclick="exportNotes('obsidian')">Export Obsidian</button>
+                            <button class="btn btn-small" onclick="exportNotes('notion')">Export Notion</button>
                         </div>
                     </div>
                     <p id="notes-summary" class="summary"></p>
